--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+title: Private Artificial Intelligence and Cryptography Lab # the website title (if blank, full name will be used instead)
+first_name: Private Artificial Intelligence and Cryptography 
+last_name: LAB
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
