--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: Private Artificial Intelligence and Cryptography Lab # the website title (if blank, full name will be used instead)
 first_name: Private Artificial Intelligence and Cryptography 
 last_name: LAB
-email: you@example.com
+email: jwlee2815@cau.ac.kr 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -129,7 +129,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
+blog_name: PAICLAB # blog_name will be displayed in your blog page
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 lsi: true # produce an index for related posts
